part2/2.02.ProjectV1.0/fe_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
        - name: project-fe
          image: k3d-myregistry.localhost:12345/project-fe
