part2/2.02.ProjectV1.0/be_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: besvc
spec:
  type: ClusterIP
  selector:
    app: be
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
