part2/2.02.ProjectV1.0/fe_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fesvc
spec:
  type: ClusterIP
  selector:
    app: fe
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
