part2/2.02.ProjectV1.0/rproxy_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rproxysvc
spec:
  type: ClusterIP
  selector:
    app: rproxy
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 80
