part2/2.02.ProjectV1.0/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rproxysvc
            port:
              number: 2348

# Ingress is working as a LB in port host:8081 -> cluster:80 (since we mapped that port on k3d cluster creation (6.web-server.../readme.md:19))
# so we are redirecting trafic on '/' path to cluster port 2345 (previously mapped in web-server-service)

# all the req resorce (after port ie localhost:8080/...) is being passed to the service
